--- a/TODO
+++ b/TODO
@@ -1044,7 +1044,7 @@ directory of the mousetweaks source package. The files with the
 licenses are named COPYING.GPL and COPYING.FDL
 
 Wow!
-Copying information: 
+Copsdfying information: 
 
 The files included in the mousetweaks source package are licensed under the 
 GNU General Public License version 3.0. The manual and its pictures are
@@ -1053,7 +1053,7 @@ licensed under the GNU Free Documentation License version 1.2.
 You can find a copy of the text of the licenses in the root 
 directory of the mousetweaks source package. The files with the 
 licenses are named COPYING.GPL and COPYING.FDL
-
+sdf
 Wow!
 Copying information: 
 
@@ -1066,3 +1066,4 @@ directory of the mousetweaks source package. The files with the
 licenses are named COPYING.GPL and COPYING.FDL
 
 Wow!
+dfsdf
